Fix: 1. Improve the style of link 2. Add auto breakline wrap

--- a/src/app/src/styles/main.scss
+++ b/src/app/src/styles/main.scss
@@ -203,3 +203,20 @@ body {
   color: #000000;
 }
 
+.cm-content {
+  white-space: pre-wrap;
+}
+
+a {
+  text-decoration: underline;
+  color: rgb(20, 230, 146);
+
+  &:active, &:hover {
+    color: rgb(20, 202, 230);
+    @at-root {
+      #{selector-parse(&)} {
+        cursor: pointer;
+      }
+    }
+  }
+}
